# mooncack

./: BitCrack_Modernization_Report.md  CMakeLists.txt  Cargo.toml  Dockerfile  MODIFICATIONS.md  Makefile.new  README.md  analysis.md  bitcrack_capi.cpp  bitcrack_capi.h  build.rs  wrapper_header.h
AddressUtil/: AddressUtil.h  Base58.cpp  hash.cpp
CryptoUtil/: CryptoUtil.h
CudaKeySearchDevice/: CMakeLists.txt  CudaAtomicList.cu  CudaAtomicList.h  CudaDeviceKeys.cu  CudaDeviceKeys.h  CudaKeySearchDevice.cpp  CudaKeySearchDevice.h  cudabridge.cu  cudabridge.h
KeyFinder/: CMakeLists.txt  main.cpp
KeyFinderLib/: KeyFinder.cpp  KeyFinder.h  KeySearchTypes.h
Logger/: Logger.cpp  Logger.h
cudaInfo/: CMakeLists.txt
cudaMath/: secp256k1.cuh
cudaUtil/: CMakeLists.txt  cudaUtil.cpp  cudaUtil.h
pybind_src/: pybitcrack_bindings.cpp
secp256k1lib/: secp256k1.cpp  secp256k1.h
src/: lib.rs
